main.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Poppins:wght@300;400;500;600;700&display=swap');

*, *::before, *::after {
  box-sizing: border-box;
  margin: 0;
}

:root {
  --primary: #6366f1;

  --clr-white: #ffffff;
  --clr-black: #000000;

  --clr-body-background: var(--clr-white);
  --clr-body-text: #565973;
  --clr-heading-text: #000F19;
  --clr-second-background: #f3f6ff;

  --clr-button-text: var(--clr-white);
  --clr-button-background: var(--primary);
  --clr-button-hover-background: #000F19;

  --clr-border-light: #e5e7eb;
  --clr-shadow-light: rgba(0,0,0,0.05);

  --clr-hero-gradient: linear-gradient(90deg, rgba(255, 255, 255, 0.07) 0%, rgba(218, 70, 239, 0.05) 42%, rgba(99, 102, 241, 0.07) 83%);
  --clr-hero-gradient-dark: linear-gradient(180deg, #0b1520 0%, #000F19 100%);
}


body.darkmode {
  --clr-body-background: #0b0f19;
  --clr-body-text: #d1d5db;
  --clr-heading-text: #ffffff;

  --clr-button-background: #6366f1;
  --clr-button-hover-background: #374151;
  --clr-second-background: #151822;

  --clr-border-light: #374151;
  --clr-shadow-light: none;
}

html {
  scroll-behavior: smooth;
  margin: 0;
  font-size: 16px;
  font-weight: 400;
  font-style: normal;
  line-height: 1.5;
}

body {
  font-size: 16px;
  font-weight: 400;
  font-style: normal;
  line-height: 1.5;
  font-family: "Poppins", system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
  color: var(--clr-body-text);
  background-color: var(--clr-body-background);
}

h1,
h2,
h3,
h4,
h5,
h6 { color: var(--clr-heading-text); }

button, .btn {
  color: var(--clr-button-text);
  background-color: var(--clr-button-background);
  padding: 10px 20px;
  border-radius: 4px;
  border: none;
  cursor: pointer;
  transition: background 0.5s ease-in-out;
}
button:hover, .btn:hover {
  background-color: var(--clr-button-hover-background);
}

.btn-app {
  color: var(--clr-button-text);
  background-color: var(--clr-button-background);
  padding: 10px 20px;
  border-radius: 4px;
  border: none;
  cursor: pointer;
  transition: background 0.5s ease-in-out;
  width: 40%;
}

.btn-app:hover {
  background-color: var(--clr-button-hover-background);
}


.container {
  max-width: 1320px;
  margin-left: auto;
  margin-right: auto;
  padding-left: 1rem;
  padding-right: 1rem;
}

section {
  text-align: left;  /* default vänster */
}

.hero, .brands {
  text-align: center;
}

section > * {
  margin-left: auto;
  margin-right: auto;          
}



/* === Dark Mode === */
body.darkmode {
  --clr-body-background:#000F19;
  --clr-heading-text:#ffffff;
  --color-body-text:#d1d5db;
  --clr-button-background:#6366F1;
  --clr-button-hover-background:#374151;

  background-color: var(--clr-body-background);
  color: var(--color-body-text);
}

body.darkmode header { background-color: #0b1520; }
body.darkmode .header-area { border-color:#1f2937; }
body.darkmode .hero { background-color: #111827; }
body.darkmode .hero-content h2 { color:#fff; }
body.darkmode .hero-content p { color:#c7d2fe; }

body.darkmode .btn {
  background-color: var(--clr-button-background);
  color: var(--clr-button-text);
}

/* Butiksknappar-knappar i dark mode */
body.darkmode .store-btn {
  background-color: #1f2937;
  border-color: #374151;
}
body.darkmode .store-btn:hover { background-color: #374151; }

/* === Header === */
.header-area {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 76px;
}

.logotype { display: flex; align-items: center; gap: .5rem; }
.headline { margin-left: 0; }

.actions {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 2rem;
}

/* Darkmode Switch */
.switch {
  position: relative;
  display: inline-block;
  width: 46px;
  height: 24px;
  margin-left: 8px;
}
.switch input { opacity: 0; width: 0; height: 0; }
.slider {
  position: absolute; inset: 0;
  cursor: pointer;
  background-color: #ccc;
  border-radius: 24px;
  transition: 0.4s;
}
.slider:before {
  content: "";
  position: absolute;
  height: 18px; width: 18px;
  left: 3px; bottom: 3px;
  background-color: #fff;
  border-radius: 50%;
  transition: 0.4s;
}



.switch input:checked + .slider { 
  background-color: var(--primary); }
.switch input:checked + .slider:before { 
  transform: translateX(22px); }

section { 
  padding: 80px 0; }


/* Hamnurger-menu*/
.nav-links {
  display: flex;
  gap: 2rem;
  justify-content: flex-end;
}

.nav-links a {
  text-decoration: none;
  color: var(--clr-heading-text);
}

.header-area .icon {
  display: none;
  font-size: 28px;
  cursor: pointer;
}

/* Mobil-läge */
@media screen and (max-width: 768px) {
  .nav-links {
    display: none;
    position: absolute;
    top: 76px;
    right: 0;
    background: #fff;
    flex-direction: column;
    align-items: flex-start;
    width: 200px;
    padding: 1rem;
    box-shadow: 0px 4px 8px rgba(0,0,0,0.1);
    z-index: 999;
  }
    .darkmode-text {
    display: none;
  }

    .btn {
    display: none;
  }
}

  .nav-links a {
    padding: 10px 0;
    width: 100%;
  }

  /* Dölj signup-knappen på mobil */
  .signup-btn {
    display: none;
  }

  /*hambuber-style no background */
.hamburger {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 30px;      
  height: 20px;     
  background: none;
  border: none;
  cursor: pointer;
  padding: 0;
}

/* Hamburgerstrecken */
.hamburger span {
  display: block;
  height: 3px;                   
  width: 100%;                   
  background-color: var(--clr-heading-text);
  border-radius: 2px;            
  transition: 0.3s;
}

/* ger ingen svart bakgrund när jag klickat på hamburgaren */
.hamburger:focus,
.hamburger:active {
  outline: none;
  background: none;
  box-shadow: none;
}
/* Styla hamburger menu */
.topnav a.icon {
  background: var(--clr-black);
  display: block;
  position: absolute;
  right: 0;
  top: 0;
}
/* ... */

